--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
 
-<style>
-
 .splashPage {
   display: grid;
   width: 100%;
-  height: 100%;
+  height: 1000px;
   background-color: seagreen;
-  border: black;
+  border: 4px solid black;
+  grid-template-columns: 1fr 5fr;
 }
 
-.red {
-  color: red;
+#green {
+  background: greenyellow;
 }
 
-.blue {
-  color: blue;
+#red { 
+  background-color: red;
 }
-</style>
+
+#blue {
+  background-color: blue;
+}
+#purple {
+  background-color: purple;
+}
+.long {
+  grid-column: 1 / span 2;
+}
