--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-
-.splashPage {
+/* <---1--> */
+/* .splashPage {
   display: grid;
   width: 100%;
   height: 1000px;
@@ -8,20 +8,55 @@
   grid-template-columns: 1fr 5fr;
 }
 
-#green {
-  background: greenyellow;
+.coMessage {
+  background-image: url('./images/iLLDrac.png');
 }
 
-#red { 
+#green {
+  background: greenyellow;
+  background-image: url('./images/iLLDrac.png');
+  justify-content: stretch;
+}
+
+#red {
   background-color: red;
+  background-image: url('./images/iLLtech_2023_003.png');
+  flex-direction: row-reverse
+  
 }
 
 #blue {
   background-color: blue;
+  background-image: url('./images/iLLDrac.png');
 }
+
 #purple {
   background-color: purple;
+  background-image: url('./images/iLLDrac.png');
 }
+
 .long {
   grid-column: 1 / span 2;
+} */
+
+
+/* <----2---> */
+
+.border {
+  border: 5px solid gold;
+  align-items: center;
+}
+
+.border2 {
+  border: 10px solid rgb(163, 5, 255);
+}
+
+.boxsize {
+  width: 256px;
+  height: 336px;
+}
+
+.boxsize2 {
+  width: 216px;
+  height: 336px;
 }
